--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,302 +1,313 @@
-
 <div class="main" ng-controller="main">
 	<div class="main_banner">
-		<div class="main_jiantou">
-			<span>
+		<div class="main_keji_ke">
+			<div class="main_jiantou">
+				<span>
 				<img src="../images/main_jiantou_left.png"/>
 			</span>
-			<span>
+				<span>
 				<img src="../images/main_jiantou_you.png"/>
 			</span>
-		</div>
-		<div class="main_bann">
-			<div class="main_ban">
-				<img src="../images/main_banner.jpg" />
-				<img src="../images/main_banner.jpg" />
-				<img src="../images/main_banner.jpg" />
+			</div>
+			<div class="main_bann">
+				<div class="main_ban">
+					<img src="../images/main_banner.jpg" />
+					<img src="../images/main_banner.jpg" />
+					<img src="../images/main_banner.jpg" />
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class="main_keji">
-		<h5>科技</h5>
-		<p>五大分类·应有尽有·精致细腻</p>
-		<div class="main_keji_sp">
-			<div class="main_keji_sp_one">
-				<div class="main_keji_sp_one_img">
-					<img src="../images/main_keji_sp_1.png" />
+		<div class="main_keji_ke">
+			<h5>科技</h5>
+			<p>五大分类·应有尽有·精致细腻</p>
+			<div class="main_keji_sp">
+				<div class="main_keji_sp_one">
+					<div class="main_keji_sp_one_img">
+						<img src="../images/main_keji_sp_1.png" />
+					</div>
+					<div class="main_keji_sp_one_dis_img">
+						<img src="../images/main_keji_sp_one_dis_img.png" />
+					</div>
+					<h6>家庭影院</h6>
 				</div>
-				<div class="main_keji_sp_one_dis_img">
-					<img src="../images/main_keji_sp_one_dis_img.png" />
+				<div class="main_keji_sp_one">
+					<div class="main_keji_sp_one_img">
+						<img src="../images/main_keji_2.png" style="padding: 30px 24px;" />
+					</div>
+					<div class="main_keji_sp_one_dis_img">
+						<img src="../images/main_keji_sp_one_dis_img.png" />
+					</div>
+					<h6>HiFi发烧</h6>
 				</div>
-				<h6>家庭影院</h6>
-			</div>
-			<div class="main_keji_sp_one">
-				<div class="main_keji_sp_one_img">
-					<img src="../images/main_keji_2.png" style="padding: 30px 24px;" />
+				<div class="main_keji_sp_one">
+					<div class="main_keji_sp_one_img">
+						<img src="../images/main_keji_3.png" style="padding: 30px 22px;" />
+					</div>
+					<div class="main_keji_sp_one_dis_img">
+						<img src="../images/main_keji_sp_one_dis_img.png" />
+					</div>
+					<h6>3D屏幕</h6>
 				</div>
-				<div class="main_keji_sp_one_dis_img">
-					<img src="../images/main_keji_sp_one_dis_img.png" />
+				<div class="main_keji_sp_one">
+					<div class="main_keji_sp_one_img">
+						<img src="../images/main_keji_4.png" style="padding: 30px 28px;" />
+					</div>
+					<div class="main_keji_sp_one_dis_img">
+						<img src="../images/main_keji_sp_one_dis_img.png" />
+					</div>
+					<h6>多功能会议</h6>
 				</div>
-				<h6>HiFi发烧</h6>
-			</div>
-			<div class="main_keji_sp_one">
-				<div class="main_keji_sp_one_img">
-					<img src="../images/main_keji_3.png" style="padding: 30px 22px;" />
-				</div>
-				<div class="main_keji_sp_one_dis_img">
-					<img src="../images/main_keji_sp_one_dis_img.png" />
-				</div>
-				<h6>3D屏幕</h6>
-			</div>
-			<div class="main_keji_sp_one">
-				<div class="main_keji_sp_one_img">
-					<img src="../images/main_keji_4.png" style="padding: 30px 28px;" />
-				</div>
-				<div class="main_keji_sp_one_dis_img">
-					<img src="../images/main_keji_sp_one_dis_img.png" />
-				</div>
-				<h6>多功能会议</h6>
 			</div>
 		</div>
 	</div>
 	<div class="main_product">
-		<h5>产品</h5>
-		<p>科技让你更轻松，享受快乐科技</p>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+		<div class="main_keji_ke">
+			<h5>产品</h5>
+			<p>科技让你更轻松，享受快乐科技</p>
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
-		</div>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
-		</div>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
-		</div>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
-		</div>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
-		</div>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
-		</div>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
-		</div>
-		<div class="main_product_one">
-			<div class="main_product_lia">
-				<div class="main_product_hide">
-					<img src="../images/main_product_hide.png" />
+			<div class="main_product_one">
+				<div class="main_product_lia">
+					<div class="main_product_hide">
+						<img src="../images/main_product_hide.png" />
+					</div>
+					<div class="main_product_img">
+						<img src="../images/main_product1.png" class="rota_img" />
+					</div>
 				</div>
-				<div class="main_product_img">
-					<img src="../images/main_product1.png" class="rota_img"/>
-				</div>
+				<h6>3D立体环音</h6>
 			</div>
-			<h6>3D立体环音</h6>
 		</div>
 	</div>
 	<div class="main_about">
-		<h5>关于</h5>
-		<p>拥有最无敌的创意，最精美的视觉，最具国际化的意识和前瞻性思维！</p>
-		<p>自1991年公司创立至今，历经三十余载，始终坚持从事高档精品科技设计，成就经典品牌。</p>
-		<p>科技有限公司坐落于“中国制造重镇” ——广东省揭阳市</p>
+		<div class="main_about_ab">
+			<h5>关于</h5>
+			<p>拥有最无敌的创意，最精美的视觉，最具国际化的意识和前瞻性思维！</p>
+			<p>自1991年公司创立至今，历经三十余载，始终坚持从事高档精品科技设计，成就经典品牌。</p>
+			<p>科技有限公司坐落于“中国制造重镇” ——广东省揭阳市</p>
+		</div>
 	</div>
 	<div class="main_new">
-		<h5>新闻</h5>
-		<p>创意似金，敬业如牛，深入成就深度</p>
-		<div class="main_new_container">
-			<div class="main_new_container_one">
-				<img src="../images/main_new.jpg"/>
-				<div class="main_new_container_one_left">
-					<span>07-30</span>
-					<span>2016</span>
-				</div>
-				<div class="main_new_container_one_right">
-					<div class="main_new_container_one_right_top">
-						<h6>消费升级 定制家具保持30-50%高速...</h6>
-						<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+		<div class="main_keji_ke">
+			<h5>新闻</h5>
+			<p>创意似金，敬业如牛，深入成就深度</p>
+			<div class="main_new_container">
+				<div class="main_new_container_one">
+					<img src="../images/main_new.jpg" />
+					<div class="main_new_container_one_left">
+						<span>07-30</span>
+						<span>2016</span>
 					</div>
-					<div class="main_new_container_one_right_bottom">
-						<span>标签：驱动力 发展期 消费</span>
-					</div>
-				</div>
-			</div>
-			<div class="main_new_container_one">
-				<img src="../images/main_new.jpg"/>
-				<div class="main_new_container_one_left">
-					<span>07-30</span>
-					<span>2016</span>
-				</div>
-				<div class="main_new_container_one_right">
-					<div class="main_new_container_one_right_top">
-						<h6>消费升级 定制家具保持30-50%高速...</h6>
-						<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
-					</div>
-					<div class="main_new_container_one_right_bottom">
-						<span>标签：驱动力 发展期 消费</span>
+					<div class="main_new_container_one_right">
+						<div class="main_new_container_one_right_top">
+							<h6>消费升级 定制家具保持30-50%高速...</h6>
+							<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+						</div>
+						<div class="main_new_container_one_right_bottom">
+							<span>标签：驱动力 发展期 消费</span>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="main_new_container_one" style="margin-right: 0;">
-				<img src="../images/main_new.jpg"/>
-				<div class="main_new_container_one_left">
-					<span>07-30</span>
-					<span>2016</span>
-				</div>
-				<div class="main_new_container_one_right">
-					<div class="main_new_container_one_right_top">
-						<h6>消费升级 定制家具保持30-50%高速...</h6>
-						<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+				<div class="main_new_container_one">
+					<img src="../images/main_new.jpg" />
+					<div class="main_new_container_one_left">
+						<span>07-30</span>
+						<span>2016</span>
 					</div>
-					<div class="main_new_container_one_right_bottom">
-						<span>标签：驱动力 发展期 消费</span>
-					</div>
-				</div>
-			</div>
-			<div class="main_new_container_one">
-				<img src="../images/main_new.jpg"/>
-				<div class="main_new_container_one_left">
-					<span>07-30</span>
-					<span>2016</span>
-				</div>
-				<div class="main_new_container_one_right">
-					<div class="main_new_container_one_right_top">
-						<h6>消费升级 定制家具保持30-50%高速...</h6>
-						<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
-					</div>
-					<div class="main_new_container_one_right_bottom">
-						<span>标签：驱动力 发展期 消费</span>
+					<div class="main_new_container_one_right">
+						<div class="main_new_container_one_right_top">
+							<h6>消费升级 定制家具保持30-50%高速...</h6>
+							<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+						</div>
+						<div class="main_new_container_one_right_bottom">
+							<span>标签：驱动力 发展期 消费</span>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="main_new_container_one">
-				<img src="../images/main_new.jpg"/>
-				<div class="main_new_container_one_left">
-					<span>07-30</span>
-					<span>2016</span>
-				</div>
-				<div class="main_new_container_one_right">
-					<div class="main_new_container_one_right_top">
-						<h6>消费升级 定制家具保持30-50%高速...</h6>
-						<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+				<div class="main_new_container_one" style="margin-right: 0;">
+					<img src="../images/main_new.jpg" />
+					<div class="main_new_container_one_left">
+						<span>07-30</span>
+						<span>2016</span>
 					</div>
-					<div class="main_new_container_one_right_bottom">
-						<span>标签：驱动力 发展期 消费</span>
+					<div class="main_new_container_one_right">
+						<div class="main_new_container_one_right_top">
+							<h6>消费升级 定制家具保持30-50%高速...</h6>
+							<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+						</div>
+						<div class="main_new_container_one_right_bottom">
+							<span>标签：驱动力 发展期 消费</span>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="main_new_container_one" style="margin-right: 0;">
-				<img src="../images/main_new.jpg"/>
-				<div class="main_new_container_one_left">
-					<span>07-30</span>
-					<span>2016</span>
-				</div>
-				<div class="main_new_container_one_right">
-					<div class="main_new_container_one_right_top">
-						<h6>消费升级 定制家具保持30-50%高速...</h6>
-						<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+				<div class="main_new_container_one">
+					<img src="../images/main_new.jpg" />
+					<div class="main_new_container_one_left">
+						<span>07-30</span>
+						<span>2016</span>
 					</div>
-					<div class="main_new_container_one_right_bottom">
-						<span>标签：驱动力 发展期 消费</span>
+					<div class="main_new_container_one_right">
+						<div class="main_new_container_one_right_top">
+							<h6>消费升级 定制家具保持30-50%高速...</h6>
+							<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+						</div>
+						<div class="main_new_container_one_right_bottom">
+							<span>标签：驱动力 发展期 消费</span>
+						</div>
+					</div>
+				</div>
+				<div class="main_new_container_one">
+					<img src="../images/main_new.jpg" />
+					<div class="main_new_container_one_left">
+						<span>07-30</span>
+						<span>2016</span>
+					</div>
+					<div class="main_new_container_one_right">
+						<div class="main_new_container_one_right_top">
+							<h6>消费升级 定制家具保持30-50%高速...</h6>
+							<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+						</div>
+						<div class="main_new_container_one_right_bottom">
+							<span>标签：驱动力 发展期 消费</span>
+						</div>
+					</div>
+				</div>
+				<div class="main_new_container_one" style="margin-right: 0;">
+					<img src="../images/main_new.jpg" />
+					<div class="main_new_container_one_left">
+						<span>07-30</span>
+						<span>2016</span>
+					</div>
+					<div class="main_new_container_one_right">
+						<div class="main_new_container_one_right_top">
+							<h6>消费升级 定制家具保持30-50%高速...</h6>
+							<span>消费作为宏观增长的驱动力之一，近年来对GDP的拉动已超过60%，于此同时</span>
+						</div>
+						<div class="main_new_container_one_right_bottom">
+							<span>标签：驱动力 发展期 消费</span>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="main_footer">
-		<h5>联系</h5>
-		<p>您的一份建议，我的百分创意</p>
-		<div class="main_footer_contact">
-			<div class="main_footer_contact_left">
-				<h6>未来科技技术有限公司</h6>
-				<div class="main_footer_contact_left_xx">
-					<img src="../images/main_foot_1.png"/>
-					<span>地址：广东揭阳人民政府左侧酒店五楼M1128间</span>
+		<div class="main_keji_ke">
+			<h5>联系</h5>
+			<p>您的一份建议，我的百分创意</p>
+			<div class="main_footer_contact">
+				<div class="main_footer_contact_left">
+					<h6>未来科技技术有限公司</h6>
+					<div class="main_footer_contact_left_xx">
+						<img src="../images/main_foot_1.png" />
+						<span>地址：广东揭阳人民政府左侧酒店五楼M1128间</span>
+					</div>
+					<div class="main_footer_contact_left_xx">
+						<img src="../images/main_foot_2.png" />
+						<span>手机：1354698745/15896523254</span>
+					</div>
+					<div class="main_footer_contact_left_xx">
+						<img src="../images/main_foot_3.png" />
+						<span>邮箱：1236548565@qq.com</span>
+					</div>
+					<div class="main_footer_contact_left_xx">
+						<img src="../images/main_foot_4.png" />
+						<span>电话：+86-512-4562</span>
+					</div>
+					<div class="main_footer_contact_left_xx">
+						<img src="../images/main_foot_5.png" />
+						<span>邮编：522000</span>
+					</div>
+					<div class="main_footer_contact_left_yy">
+						<img src="../images/main_foot_one.png" />
+						<img src="../images/main_foot_two.png" />
+						<img src="../images/main_foot_three.png" />
+					</div>
 				</div>
-				<div class="main_footer_contact_left_xx">
-					<img src="../images/main_foot_2.png"/>
-					<span>手机：1354698745/15896523254</span>
+				<div class="main_footer_contact_right">
+					<input type="text" placeholder="姓名" />
+					<input type="text" placeholder="电话" />
+					<input type="text" placeholder="邮箱" />
+					<input type="text" placeholder="内容" />
+					<input type="button" name="" id="" value="提交信息" />
 				</div>
-				<div class="main_footer_contact_left_xx">
-					<img src="../images/main_foot_3.png"/>
-					<span>邮箱：1236548565@qq.com</span>
-				</div>
-				<div class="main_footer_contact_left_xx">
-					<img src="../images/main_foot_4.png"/>
-					<span>电话：+86-512-4562</span>
-				</div>
-				<div class="main_footer_contact_left_xx">
-					<img src="../images/main_foot_5.png"/>
-					<span>邮编：522000</span>
-				</div>
-				<div class="main_footer_contact_left_yy">
-					<img src="../images/main_foot_one.png"/>
-					<img src="../images/main_foot_two.png"/>
-					<img src="../images/main_foot_three.png"/>
-				</div>
-			</div>
-			<div class="main_footer_contact_right">
-				<input type="text" placeholder="姓名" />
-				<input type="text" placeholder="电话" />
-				<input type="text" placeholder="邮箱" />
-				<input type="text" placeholder="内容" />
-				<input type="button" name="" id="" value="提交信息" />
 			</div>
 		</div>
 	</div>
