--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,18 +14,19 @@
 	transition: 1s;
 }
 .main_bann{
-	width: 100%;
+	width: 1349px;
 	height: 700px;
+	margin: auto;
 	position: absolute;
 	overflow-x: hidden;
 }
 .main_ban{
-	width: 1349px;
+	width: 100%;
 	height: 700px;
 	position: absolute;
 }
 .main_ban img{
-	width: 1349px;
+	width:1349px;
 	height: 700px;
 	float: left;
 }
@@ -73,11 +74,23 @@
 	height: 405px;
 	background: #f6f6f6;
 }
+.main_keji_ke{
+	width: 1366px;
+	margin: auto;
+	overflow: hidden;
+}
+.main_about_ab{
+	width: 1366px;
+	height: 478px;
+	margin: auto;
+	background: url(../images/main_background.jpg) no-repeat;
+	background-size: 100% 100%;
+}
 .main_keji h5{
 	text-align: center;
 	font-size: 28px;
 	line-height: 58px;
-	padding-top: 70px;
+	margin-top: 70px;
 	color: #37474f;
 	transition: 0.5s;
 }
@@ -152,7 +165,7 @@
 	text-align: center;
 	font-size: 28px;
 	line-height: 48px;
-	padding-top: 70px;
+	margin-top: 70px;
 	color: #37474f;
 	transition: 0.5s;
 }
@@ -225,14 +238,12 @@
 .main_about{
 	width: 100%;
 	height: 478px;
-	background: url(../images/main_background.jpg) no-repeat;
-	background-size: 100% 100%;
 }
 .main_about h5{
 	text-align: center;
 	font-size: 28px;
 	line-height: 58px;
-	padding-top: 70px;
+	margin-top: 70px;
 	color: #37474f;
 	transition: 0.5s;
 }
@@ -257,7 +268,7 @@
 	text-align: center;
 	font-size: 28px;
 	line-height: 58px;
-	padding-top: 70px;
+	margin-top: 70px;
 	color: #37474f;
 	transition: 0.5s;
 }
@@ -354,7 +365,7 @@
 	text-align: center;
 	font-size: 28px;
 	line-height: 48px;
-	padding-top: 70px;
+	margin-top: 70px;
 	color: #fff;
 	transition: 0.5s;
 }
