--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,4 +1,4 @@
-<div ng-controller="about">
+<div ng-controller="about" class="about-back">
   <div class="about-img">
     <img src="images/about-banner.jpg" alt="" id="about-img"/>
   </div>
